# TLDW

./: .env.example  .gitignore  .vercelignore  231failed.txt  API_KEYS_SETUP.md  API_KEY_SETUP_GUIDE.md  APP_RUNNER_QUICK_START.md  COMPREHENSIVE_TRANSCRIPT_FIXES_IMPLEMENTATION_SUMMARY.md  CONFIG_CIRCUIT_BREAKER_VALIDATION_SUMMARY.md  CONTAINER_DEPLOYMENT.md  CRITICAL_FIXES_FINAL_IMPLEMENTATION.md  DATABASE_DEPLOYMENT_ENHANCEMENTS.md  DEPLOYMENT.md  Dockerfile  ENHANCED_TRANSCRIPT_DEPLOYMENT.md  FFMPEG_SERVICE_CLEANUP_FINAL_SUMMARY.md  GEMINI_MIGRATION.md  Makefile  NO_YTDL_SUMMARIZATION_STACK_STATUS.md  OPS_CHECKLIST_PLAYWRIGHT_FIX.md  OXYLABS_PROXY_407_FIX_SUMMARY.md  OXYLABS_PROXY_FIX_RUNBOOK.md  PROXY_SESSION_FIX_SUMMARY.md  PR_PATCHES_IMPLEMENTATION_SUMMARY.md  README.md  RELIABILITY_FIX_PACK_COMPLETE_SUMMARY.md  RELIABILITY_FIX_PACK_DEPLOYMENT_SUMMARY.md  RELIABILITY_LOGGING_IMPLEMENTATION_SUMMARY.md  SURGICAL_FIXES_COMPLETE.md  TESTING_GUIDE.md  TEST_RESULTS.md  TRANSCRIPT_FIXES_SUMMARY.md  YT_DLP_RETRY_ENHANCEMENT_SUMMARY.md  a single “PR-style” patch set.txt  ai_agent_fix_prompt.md  app.py  application-logs2025-08-16T20_01_09.152Z-2025-08-16T20_02_09.152Z.json  application-logs2025-08-16T22_08_04.815Z-2025-08-16T22_09_04.815Z.json  application.py  apprunner-config-review.md  (+104 more)
agent_prompts/: cookie auth youtubei handing http transcript fetching.py  test_api.py
api/: index.py
attached_assets/: Pasted--the-fact-that-you-have-over-400-videos-is-very-likely-the-issue-That-s-the-key-piece-of-informatio-1754917204217_1754917204217.txt  (+1 more)
deployment/: create-fixed.json  (+31 more)
(+350 files in other folders)
